Web Inspector: Dark Mode: Increase contrast in the timeline tab in @media (prefers-contrast: more) and @media (prefers-color-scheme: dark) https://bugs.webkit.org/show_bug.cgi?id=271927
Reviewed by NOBODY (OOPS!).

Darken backgrounds in TimelineOverView.css.
Lighten markers and dividers in TimelineRuler.css.

* Source/WebInspectorUI/UserInterface/Views/TimelineOverview.css:
(.timeline-overview:not(.frames) > .graphs-container > .timeline-overview-graph:nth-child(even)):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .timeline-overview.edit-instruments > .tree-outline.timelines .item:nth-child(even),):
* Source/WebInspectorUI/UserInterface/Views/TimelineRuler.css:
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .timeline-ruler > .markers > .marker.load-event):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .timeline-ruler > .markers > .marker.dom-content-event):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .timeline-ruler > .markers > .marker.timestamp):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .timeline-ruler > .header > .divider > .label):

--- a/Source/WebInspectorUI/UserInterface/Views/TimelineOverview.css
+++ b/Source/WebInspectorUI/UserInterface/Views/TimelineOverview.css
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2013-2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2024 Frances Cornwall.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -202,7 +203,8 @@ body.mac-platform.legacy .timeline-overview > .graphs-container {
 }
 
 .timeline-overview:not(.frames) > .graphs-container > .timeline-overview-graph:nth-child(even) {
-    background-color: hsl(0, 0%, 96%);
+    --timeline-color: hsl(0, 0%, 95%);
+    color: var(--timeline-color);
     background-clip: padding-box;
 }
 
@@ -226,5 +228,12 @@ body.mac-platform.legacy .timeline-overview > .graphs-container {
 @media (prefers-color-scheme: dark) {
     .timeline-overview:not(.frames) > .graphs-container > .timeline-overview-graph:nth-child(even) {
         background: var(--background-color-alternate);
+    }
+
+    @media (prefers-contrast: more) {
+        .timeline-overview.edit-instruments > .tree-outline.timelines .item:nth-child(even),
+        .timeline-overview > .tree-outline.timelines .item:not(.selected):nth-child(even) {
+            background-color: hsla(0, 0%, 15%);
+        }
     }
 }
